[gd_scene load_steps=9 format=4 uid="uid://bnt0pvs63b6c0"]

[ext_resource type="PackedScene" uid="uid://bp78kjt5agwkh" path="res://scenes/Bodies/GravityBody/GravityBody.tscn" id="1_l7qt5"]
[ext_resource type="Script" path="res://scenes/Bodies/ship-gb/ship.gd" id="2_fy0np"]
[ext_resource type="Texture2D" uid="uid://djqsgkq3h2i8c" path="res://scenes/Bodies/ship-gb/spaceShips_001.png" id="3_07q6a"]
[ext_resource type="Texture2D" uid="uid://djnhfgj5od2l" path="res://scenes/Bodies/ship-gb/arrowsdiag.png" id="4_kxi2h"]

[sub_resource type="CanvasTexture" id="CanvasTexture_byvxo"]
diffuse_texture = ExtResource("3_07q6a")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ud460"]
radius = 128.0
height = 512.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bf135"]
resource_name = "arrows_diagonal"
texture = ExtResource("4_kxi2h")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_gjgv2"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_bf135")

[node name="Ship" instance=ExtResource("1_l7qt5")]
collision_layer = 1
collision_mask = 1
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("2_fy0np")
magic_L_strength = 100
magic_R_strength = 100
control_mode = 1
size_scale = 0.2
label = "ship"
velocity_start = Vector2(10, 10)
is_reactive = true
can_flyby = true

[node name="Sprite2D" parent="." index="0"]
rotation = -1.5708
texture = SubResource("CanvasTexture_byvxo")

[node name="ExhaustSprite2D" type="Sprite2D" parent="Sprite2D" index="2"]
show_behind_parent = true
position = Vector2(0, 1)

[node name="ColorRect" type="ColorRect" parent="Sprite2D/ExhaustSprite2D" index="0"]
offset_left = -17.0
offset_top = -100.0
offset_right = -7.0
offset_bottom = -20.0
color = Color(1, 1, 0.101961, 1)

[node name="ColorRect2" type="ColorRect" parent="Sprite2D/ExhaustSprite2D" index="1"]
offset_left = 9.0
offset_top = -100.0
offset_right = 19.0
offset_bottom = -20.0
color = Color(1, 1, 0.101961, 1)

[node name="Label" parent="Guide/LabelPanel" index="0"]
text = "ship (turning locked)"

[node name="DragArea" parent="." index="2"]
rotation = -1.5708

[node name="BodyArea" parent="." index="3"]
rotation = -1.5708

[node name="MagicAreaL" type="Area2D" parent="." index="4"]
visible = false
collision_layer = 2
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="MagicAreaL" index="0"]
rotation = -1.57079
shape = SubResource("CapsuleShape2D_ud460")

[node name="ColorRect" type="ColorRect" parent="MagicAreaL" index="1"]
custom_minimum_size = Vector2(512, 256)
offset_left = -258.0
offset_top = -130.0
offset_right = 254.0
offset_bottom = 126.0
color = Color(0.588235, 1, 0.4, 0.388235)

[node name="TileMapLayer" type="TileMapLayer" parent="MagicAreaL" index="2"]
rotation = 0.785398
tile_map_data = PackedByteArray("AAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wAAAAAAAAAAAAD8////AAAAAAAAAAD8//7/AAAAAAAAAAD9//7/AAAAAAAAAAD+//7/AAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAACAP7/AAAAAAAAAAADAP7/AAAAAAAAAAABAP7/AAAAAAAAAAAAAP7/AAAAAAAAAAD+////AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAADAP//AAAAAAAAAAADAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAEAAAAAAAAAAAD8//3/AAAAAAAAAAD9//3/AAAAAAAAAAD+//3/AAAAAAAAAAD///3/AAAAAAAAAAAAAP3/AAAAAAAAAAABAP3/AAAAAAAAAAACAP3/AAAAAAAAAAADAP3/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP//AAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAIAAAAAAAAAAAACAAIAAAAAAAAAAAABAAIAAAAAAAAAAAD7/wIAAAAAAAAAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD9//v/AAAAAAAAAAD9//z/AAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD+//v/AAAAAAAAAAD+//z/AAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD///v/AAAAAAAAAAD///z/AAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAPv/AAAAAAAAAAABAPz/AAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAACAPv/AAAAAAAAAAACAPz/AAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAADAPv/AAAAAAAAAAADAPz/AAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAD3//n/AAAAAAAAAAD3//r/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD3////AAAAAAAAAAD3/wAAAAAAAAAAAAD3/wEAAAAAAAAAAAD3/wIAAAAAAAAAAAD3/wMAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wUAAAAAAAAAAAD3/wYAAAAAAAAAAAD4//n/AAAAAAAAAAD4//r/AAAAAAAAAAD4//v/AAAAAAAAAAD4//z/AAAAAAAAAAD4//3/AAAAAAAAAAD4//7/AAAAAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD4/wEAAAAAAAAAAAD4/wIAAAAAAAAAAAD4/wMAAAAAAAAAAAD4/wQAAAAAAAAAAAD4/wUAAAAAAAAAAAD4/wYAAAAAAAAAAAD5//n/AAAAAAAAAAD5//r/AAAAAAAAAAD5//v/AAAAAAAAAAD5//z/AAAAAAAAAAD5//3/AAAAAAAAAAD5//7/AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wUAAAAAAAAAAAD5/wYAAAAAAAAAAAD6//n/AAAAAAAAAAD6//r/AAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAAAAAAAAAD7//n/AAAAAAAAAAD7//r/AAAAAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAAAAAAAAAD8//n/AAAAAAAAAAD8//r/AAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD9//n/AAAAAAAAAAD9//r/AAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAAAAAAAAAD+//n/AAAAAAAAAAD+//r/AAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD///n/AAAAAAAAAAD///r/AAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAAAAPn/AAAAAAAAAAAAAPr/AAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAABAPn/AAAAAAAAAAABAPr/AAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAACAPn/AAAAAAAAAAACAPr/AAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAADAPn/AAAAAAAAAAADAPr/AAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAAEAPn/AAAAAAAAAAAEAPr/AAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAPn/AAAAAAAAAAAFAPr/AAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAPn/AAAAAAAAAAAGAPr/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAPn/AAAAAAAAAAAHAPr/AAAAAAAAAAAHAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_gjgv2")
rendering_quadrant_size = 64
collision_enabled = false

[node name="MagicAreaR" type="Area2D" parent="." index="5"]
visible = false
collision_layer = 2
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="MagicAreaR" index="0"]
rotation = -1.57079
shape = SubResource("CapsuleShape2D_ud460")

[node name="ColorRect" type="ColorRect" parent="MagicAreaR" index="1"]
custom_minimum_size = Vector2(512, 256)
offset_left = -258.0
offset_top = -130.0
offset_right = 254.0
offset_bottom = 126.0
color = Color(0.756863, 0.219608, 0.427451, 0.301961)

[node name="TileMapLayer2" type="TileMapLayer" parent="MagicAreaR" index="2"]
rotation = 3.92699
tile_map_data = PackedByteArray("AAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wAAAAAAAAAAAAD8////AAAAAAAAAAD8//7/AAAAAAAAAAD9//7/AAAAAAAAAAD+//7/AAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAACAP7/AAAAAAAAAAADAP7/AAAAAAAAAAABAP7/AAAAAAAAAAAAAP7/AAAAAAAAAAD+////AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAADAP//AAAAAAAAAAADAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAEAAAAAAAAAAAD8//3/AAAAAAAAAAD9//3/AAAAAAAAAAD+//3/AAAAAAAAAAD///3/AAAAAAAAAAAAAP3/AAAAAAAAAAABAP3/AAAAAAAAAAACAP3/AAAAAAAAAAADAP3/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP//AAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAIAAAAAAAAAAAACAAIAAAAAAAAAAAABAAIAAAAAAAAAAAD7/wIAAAAAAAAAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD9//v/AAAAAAAAAAD9//z/AAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD+//v/AAAAAAAAAAD+//z/AAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD///v/AAAAAAAAAAD///z/AAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAPv/AAAAAAAAAAABAPz/AAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAACAPv/AAAAAAAAAAACAPz/AAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAADAPv/AAAAAAAAAAADAPz/AAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAD3//n/AAAAAAAAAAD3//r/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD3////AAAAAAAAAAD3/wAAAAAAAAAAAAD3/wEAAAAAAAAAAAD3/wIAAAAAAAAAAAD3/wMAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wUAAAAAAAAAAAD3/wYAAAAAAAAAAAD4//n/AAAAAAAAAAD4//r/AAAAAAAAAAD4//v/AAAAAAAAAAD4//z/AAAAAAAAAAD4//3/AAAAAAAAAAD4//7/AAAAAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD4/wEAAAAAAAAAAAD4/wIAAAAAAAAAAAD4/wMAAAAAAAAAAAD4/wQAAAAAAAAAAAD4/wUAAAAAAAAAAAD4/wYAAAAAAAAAAAD5//n/AAAAAAAAAAD5//r/AAAAAAAAAAD5//v/AAAAAAAAAAD5//z/AAAAAAAAAAD5//3/AAAAAAAAAAD5//7/AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wUAAAAAAAAAAAD5/wYAAAAAAAAAAAD6//n/AAAAAAAAAAD6//r/AAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAAAAAAAAAD7//n/AAAAAAAAAAD7//r/AAAAAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAAAAAAAAAD8//n/AAAAAAAAAAD8//r/AAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD9//n/AAAAAAAAAAD9//r/AAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAAAAAAAAAD+//n/AAAAAAAAAAD+//r/AAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD///n/AAAAAAAAAAD///r/AAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAAAAPn/AAAAAAAAAAAAAPr/AAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAABAPn/AAAAAAAAAAABAPr/AAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAACAPn/AAAAAAAAAAACAPr/AAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAADAPn/AAAAAAAAAAADAPr/AAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAAEAPn/AAAAAAAAAAAEAPr/AAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAPn/AAAAAAAAAAAFAPr/AAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAPn/AAAAAAAAAAAGAPr/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAPn/AAAAAAAAAAAHAPr/AAAAAAAAAAAHAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_gjgv2")
rendering_quadrant_size = 64
collision_enabled = false

[node name="Sprite2D" type="Sprite2D" parent="MagicAreaR" index="3"]

[node name="RayCast2D" type="RayCast2D" parent="." index="6"]
target_position = Vector2(5, 0)
